--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,16 @@
                 <target>6</target>
             </configuration>
         </plugin>
+      <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.2</version>
+        <configuration>
+          <uriEncoding>UTF-8</uriEncoding>
+          <path>/</path>
+          <port>52500</port>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   <properties>
